# bereme-protocol

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cloud_to_device.rs  device_to_cloud.rs
src/: cloud_to_device.rs  common.rs  device_to_cloud.rs  envelope.rs  lib.rs  rustdesk_compat.rs
tests/: adversarial.rs  round_trip.rs  rustdesk_compat.rs
