[package]
name = "bereme-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Shared wire types for the JSON-WS v2 Bereme cloud↔device protocol. Consumed by both cloud-rust (cloud-protocol re-export) and kvm-rust (kvm-cloud client)."

# This crate intentionally lives outside both the cloud-rust and
# kvm-rust workspaces so it can be referenced via a path dependency
# from each. Wave 5 Phase 4 extracts the previously cloud-only wire
# types here so the device and the cloud type-check against the same
# schema. See cloud-rust-hardening/WIRE-PROTOCOL.md §"Reference
# encoder/decoder" for the multi-consumer plan, and the wave-05
# Phase 4 brief for the OtaPush/OtaAck additions.

[lib]
bench = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
